# rojcad

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  boot.janet  build.rs  index.html  justfile  upstream.janet
.github/workflows/: clippy.yml  release.yml  rustfmt.yml  test.yml
0.2.1/: janet-api.md
0.2.1/rust/rojcad/: constant.LAST_CAD_ERROR.html  fn.cad_register_functions.html  fn.parse_size_args.html  fn.rust_back_edges_showing.html  fn.rust_edge_active_showing.html  fn.rust_edge_set_color_active.html  fn.rust_edge_set_color_inactive.html  fn.rust_edge_set_thickness.html  fn.rust_edge_toggle_inactive.html  fn.rust_free_u64_array.html  fn.rust_get_selected_shape_ids.html  fn.rust_help_overlay_showing.html  fn.rust_help_overlay_toggle.html  fn.rust_init_box.html  fn.rust_init_circle.html  fn.rust_init_common.html  fn.rust_init_cube.html  fn.rust_init_cylinder_from_points.html  fn.rust_init_extrude_polygon.html  fn.rust_init_mirror.html  fn.rust_init_polygon.html  fn.rust_init_read_step.html  fn.rust_init_revolve.html  (+32 more)
0.3.0/: janet-api.html  janet-api.md
0.4.0/: janet-api.html  janet-api.md
0.4.0/rust/: crates.js  settings.html  src-files.js
boot/: model.janet
bridge/: bridge.c
doc/: janet-api.html  janet-api.md
latest/: janet-api.html
latest/rust/: help.html
licenses/: README.md  Zlib.txt
packaging/: rojcad.desktop
src/: bridge.rs  cad.rs  main.rs  sketch.rs  text.rs  types.rs
src/viewer/: app.rs  camera.rs  edge.wgsl  gizmo.rs  gizmo.wgsl  help.rs  mod.rs  pick.rs  shader.wgsl  stats.rs
tests/: test-variadic.sh
(+1680 files in other folders)
